@@ -26,7 +26,7 @@ public class ThresholdSelectorTest
     extends JGAPTestCase {
 
   /** String containing the CVS revision. Read out via reflection!*/
-  private final static String CVS_REVISION = "$Revision: 1.6 $";
+  private final static String CVS_REVISION = "$Revision: 1.7 $";
 
   public static Test suite() {
     TestSuite suite = new TestSuite(ThresholdSelectorTest.class);
@@ -111,7 +111,7 @@ public class ThresholdSelectorTest
     secondBestChrom.setFitnessValue(11);
     selector.add(secondBestChrom);
     gene = new BooleanGene();
-    gene.setAllele(new Boolean(false));
+    gene.setAllele(Boolean.valueOf(false));
     Chromosome bestChrom = new Chromosome(gene, 3);
     bestChrom.setFitnessValue(12);
     selector.add(bestChrom);
@@ -132,14 +132,14 @@ public class ThresholdSelectorTest
     // add first chromosome
     // --------------------
     Gene gene = new BooleanGene();
-    gene.setAllele(new Boolean(true));
+    gene.setAllele(Boolean.valueOf(true));
     Chromosome thirdBestChrom = new Chromosome(gene, 7);
     thirdBestChrom.setFitnessValue(10);
     selector.add(thirdBestChrom);
     // add second chromosome
     // ---------------------
     gene = new BooleanGene();
-    gene.setAllele(new Boolean(false));
+    gene.setAllele(Boolean.valueOf(false));
     Chromosome bestChrom = new Chromosome(gene, 3);
     bestChrom.setFitnessValue(12);
     selector.add(bestChrom);
@@ -183,14 +183,14 @@ public class ThresholdSelectorTest
     // add first chromosome
     // --------------------
     Gene gene = new BooleanGene();
-    gene.setAllele(new Boolean(true));
+    gene.setAllele(Boolean.valueOf(true));
     Chromosome thirdBestChrom = new Chromosome(gene, 7);
     thirdBestChrom.setFitnessValue(10);
     selector.add(thirdBestChrom);
     // add second chromosome
     // ---------------------
     gene = new BooleanGene();
-    gene.setAllele(new Boolean(false));
+    gene.setAllele(Boolean.valueOf(false));
     Chromosome bestChrom = new Chromosome(gene, 3);
     bestChrom.setFitnessValue(12);
     selector.add(bestChrom);
@@ -231,14 +231,14 @@ public class ThresholdSelectorTest
     // add first chromosome
     // --------------------
     Gene gene = new BooleanGene();
-    gene.setAllele(new Boolean(true));
+    gene.setAllele(Boolean.valueOf(true));
     Chromosome thirdBestChrom = new Chromosome(gene, 7);
     thirdBestChrom.setFitnessValue(10);
     selector.add(thirdBestChrom);
     // add second chromosome
     // ---------------------
     gene = new BooleanGene();
-    gene.setAllele(new Boolean(false));
+    gene.setAllele(Boolean.valueOf(false));
     Chromosome bestChrom = new Chromosome(gene, 3);
     bestChrom.setFitnessValue(12);
     selector.add(bestChrom);
@@ -265,14 +265,14 @@ public class ThresholdSelectorTest
     // add first chromosome
     // --------------------
     Gene gene = new BooleanGene();
-    gene.setAllele(new Boolean(true));
+    gene.setAllele(Boolean.valueOf(true));
     Chromosome thirdBestChrom = new Chromosome(gene, 7);
     thirdBestChrom.setFitnessValue(10);
     selector.add(thirdBestChrom);
     // add second chromosome
     // ---------------------
     gene = new BooleanGene();
-    gene.setAllele(new Boolean(false));
+    gene.setAllele(Boolean.valueOf(false));
     Chromosome bestChrom = new Chromosome(gene, 3);
     bestChrom.setFitnessValue(12);
     selector.add(bestChrom);
