@@ -24,7 +24,7 @@ import junit.framework.*;
 public class TournamentSelectorTest
     extends JGAPTestCase {
   /** String containing the CVS revision. Read out via reflection!*/
-  private final static String CVS_REVISION = "$Revision: 1.6 $";
+  private final static String CVS_REVISION = "$Revision: 1.7 $";
 
   public static Test suite() {
     TestSuite suite = new TestSuite(TournamentSelectorTest.class);
@@ -220,7 +220,7 @@ public class TournamentSelectorTest
     secondBestChrom.setFitnessValue(11);
     selector.add(secondBestChrom);
     gene = new BooleanGene();
-    gene.setAllele(new Boolean(false));
+    gene.setAllele(Boolean.valueOf(false));
     Chromosome bestChrom = new Chromosome(gene, 3);
     bestChrom.setFitnessValue(12);
     selector.add(bestChrom);
@@ -247,14 +247,14 @@ public class TournamentSelectorTest
     // add first chromosome
     // --------------------
     Gene gene = new BooleanGene();
-    gene.setAllele(new Boolean(true));
+    gene.setAllele(Boolean.valueOf(true));
     Chromosome thirdBestChrom = new Chromosome(gene, 7);
     thirdBestChrom.setFitnessValue(10);
     selector.add(thirdBestChrom);
     // add second chromosome
     // ---------------------
     gene = new BooleanGene();
-    gene.setAllele(new Boolean(false));
+    gene.setAllele(Boolean.valueOf(false));
     Chromosome bestChrom = new Chromosome(gene, 3);
     bestChrom.setFitnessValue(12);
     selector.add(bestChrom);
@@ -302,14 +302,14 @@ public class TournamentSelectorTest
     // add first chromosome
     // --------------------
     Gene gene = new BooleanGene();
-    gene.setAllele(new Boolean(true));
+    gene.setAllele(Boolean.valueOf(true));
     Chromosome thirdBestChrom = new Chromosome(gene, 7);
     thirdBestChrom.setFitnessValue(10);
     selector.add(thirdBestChrom);
     // add second chromosome
     // ---------------------
     gene = new BooleanGene();
-    gene.setAllele(new Boolean(false));
+    gene.setAllele(Boolean.valueOf(false));
     Chromosome bestChrom = new Chromosome(gene, 3);
     bestChrom.setFitnessValue(12);
     selector.add(bestChrom);
@@ -351,14 +351,14 @@ public class TournamentSelectorTest
     // add first chromosome
     // --------------------
     Gene gene = new BooleanGene();
-    gene.setAllele(new Boolean(true));
+    gene.setAllele(Boolean.valueOf(true));
     Chromosome thirdBestChrom = new Chromosome(gene, 7);
     thirdBestChrom.setFitnessValue(10);
     selector.add(thirdBestChrom);
     // add second chromosome
     // ---------------------
     gene = new BooleanGene();
-    gene.setAllele(new Boolean(false));
+    gene.setAllele(Boolean.valueOf(false));
     Chromosome bestChrom = new Chromosome(gene, 3);
     bestChrom.setFitnessValue(12);
     selector.add(bestChrom);
@@ -385,14 +385,14 @@ public class TournamentSelectorTest
     // add first chromosome
     // --------------------
     Gene gene = new BooleanGene();
-    gene.setAllele(new Boolean(true));
+    gene.setAllele(Boolean.valueOf(true));
     Chromosome thirdBestChrom = new Chromosome(gene, 7);
     thirdBestChrom.setFitnessValue(10);
     selector.add(thirdBestChrom);
     // add second chromosome
     // ---------------------
     gene = new BooleanGene();
-    gene.setAllele(new Boolean(false));
+    gene.setAllele(Boolean.valueOf(false));
     Chromosome bestChrom = new Chromosome(gene, 3);
     bestChrom.setFitnessValue(12);
     selector.add(bestChrom);
@@ -425,14 +425,14 @@ public class TournamentSelectorTest
     // add first chromosome
     // --------------------
     Gene gene = new BooleanGene();
-    gene.setAllele(new Boolean(true));
+    gene.setAllele(Boolean.valueOf(true));
     Chromosome thirdBestChrom = new Chromosome(gene, 7);
     thirdBestChrom.setFitnessValue(10);
     selector.add(thirdBestChrom);
     // add second chromosome
     // ---------------------
     gene = new BooleanGene();
-    gene.setAllele(new Boolean(false));
+    gene.setAllele(Boolean.valueOf(false));
     Chromosome bestChrom = new Chromosome(gene, 3);
     bestChrom.setFitnessValue(12);
     selector.add(bestChrom);
@@ -466,14 +466,14 @@ public class TournamentSelectorTest
     // add first chromosome
     // --------------------
     Gene gene = new BooleanGene();
-    gene.setAllele(new Boolean(true));
+    gene.setAllele(Boolean.valueOf(true));
     Chromosome thirdBestChrom = new Chromosome(gene, 7);
     thirdBestChrom.setFitnessValue(10);
     toAddFrom.addChromosome(thirdBestChrom);
     // add second chromosome
     // ---------------------
     gene = new BooleanGene();
-    gene.setAllele(new Boolean(false));
+    gene.setAllele(Boolean.valueOf(false));
     Chromosome bestChrom = new Chromosome(gene, 3);
     bestChrom.setFitnessValue(12);
     toAddFrom.addChromosome(bestChrom);
